--- a/Pipfile
+++ b/Pipfile
@@ -1,5 +1,5 @@
 [[source]]
-url = "https://pypi.org/simple"
+url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
@@ -8,6 +8,9 @@ PyJWT = "*"
 flask = "==1.1.1"
 flask-cors = "==3.0.8"
 flask-sqlalchemy = "*"
+flask-migrate = "*"
+Flask-Injector = "==0.12.0"
+flask-inputs = "==0.3.0"
 flask-marshmallow = "==0.10.1"
 flask-jwt-extended = "==3.23.0"
 flask-script = "*"
