Save in production

--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ HOST=0.0.0.0
 PORT=9091
 FLASK_APP=flask_app
 FLASK_DEBUG=1
-DATABASE_URI=mysql+pymysql://side_users:b1sm1llah@/side_users_db?unix-socket=/cloudsql/side-user-service:us-central1:side-users-db
+DATABASE_URI=postgresql+psycopg2://root:b1sm1llah@side_users_db/side_db
 BACKEND_BASE_URL=api
 SECRET_KEY=YjFzbTFsbGFoMTI5MDMyMyoqKiYmJkBeIypAKioyNAo
