fix(user): Invalid salt

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PYTHONUNBUFFERED=1
 ENV=local
 HOST=0.0.0.0
 PORT=9091
-FLASK_APP=flask_app
+FLASK_APP=app
 FLASK_DEBUG=1
 DATABASE_URI=postgresql+psycopg2://root:b1sm1llah@side_users_db/side_db
 BACKEND_BASE_URL=api
